--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.19.2",
+    "mammoth": "^1.11.0",
+    "multer": "^2.0.2",
     "openai": "^6.15.0",
-    "pdfkit": "^0.17.2"
+    "pdf-parse": "^2.4.5",
+    "pdfkit": "^0.17.2",
+    "unzipper": "^0.12.3"
   }
 }
